# Documentation-Helper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  diag.py  docker-compose.yml  pyproject.toml
.mypy_cache/3.12/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  cache.3.db-shm  cache.3.db-wal  cache.4.db-shm  cache.4.db-wal  cache.5.db-shm  cache.5.db-wal  cache.6.db-shm  cache.6.db-wal  cache.7.db-shm  cache.7.db-wal  cache.8.db-shm  cache.8.db-wal  cache.9.db-shm  cache.9.db-wal
docs/superpowers/specs/: 2026-07-02-generator-evaluation-design.md  2026-07-02-retrieval-evaluation-design.md
evaluation/: generator_results.json  results.json  retrieval_results.json
src/doc_helper/: __init__.py  logger.py  utils.py
src/doc_helper/agents/: __init__.py  events.py  middleware.py  rag_agent.py  tools.py
src/doc_helper/api/: __init__.py  app.py  deps.py
src/doc_helper/config/: __init__.py  settings.py
src/doc_helper/db/: __init__.py  connection.py  conversations.py  tasks.py
src/doc_helper/embeddings/: __init__.py  factory.py
src/doc_helper/evaluation/: __init__.py  dataset.py  generator_dataset.json  generator_dataset.py  generator_evaluator.py  (+10 more)
tests/: conftest.py
tests/integration/: test_api.py  test_rag_agent.py
tests/unit/: test_config.py  test_conversations.py  test_crawlers.py  test_database.py  test_embeddings_factory.py  test_events.py  test_generator_evaluator.py  test_generator_metrics.py  test_llm_factory.py  test_middleware.py  test_observability.py  test_pipeline_metadata.py  test_retrieval_evaluator.py  test_retrieval_metrics.py  test_retriever.py  test_splitters.py  test_stores.py  test_tasks.py  test_tools.py
(+31 files in other folders)
