[project]
name = "documentation-helper"
version = "0.1.0"
description = "Production-grade RAG system for LangChain documentation with configurable vector stores, embeddings, LLM providers, and evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.2.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-pinecone>=0.2.0",
    "langchain-tavily>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.0.0",
    "flashrank>=0.2.0",
    "aiosqlite>=0.20.0",
    "certifi>=2024.0.0",
    "click>=8.1.0",
    "html2text>=2024.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "streamlit>=1.40.0",
    "httpx>=0.28.0",
    "langfuse>=2.0.0",
    "ragas>=0.2.0",
    "html2text>=2025.4.15",
    "beautifulsoup4>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
doc-helper-ingest = "doc_helper.ingestion.pipeline:cli"
doc-helper-evaluate = "doc_helper.evaluation.runner:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_helper"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
